# CBD

./: .gitignore  README.md  pyproject.toml  pyrightconfig.json
configs/: mvp_baseline.yaml  real_data_smoke.yaml
docs/: first_real_data_smoke_run.md  hard_negative_curation.md  label_schema.md
manifests/: aoi_manifest.yaml  data_manifest.yaml  real_data_smoke_aoi_manifest.yaml  real_data_smoke_data_manifest.yaml
src/cbd/: cli.py  manifests.py  paths.py
src/cbd/data/: aois.py  common.py  labels.py  terrain.py
tests/: test_cli_smoke.py  test_context_features.py  test_data_prep_smoke.py  test_final_inventory_export.py  test_terrain_baseline_evaluation.py  test_terrain_candidates.py  test_terrain_derivatives.py  test_terrain_inputs.py  test_terrain_preprocess.py  test_terrain_review.py
